--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,18 @@
 buildscript {
     ext {
         room_version = '2.4.1'
-        coroutines_version = '1.5.1'
-        lifecycle_version = "2.3.1"
+        lifecycle_version = "2.4.0"
         hilt_version = '2.40.5'
         activity_compose_version = '1.3.1'
-        viewmodel_compose_version = '1.0.0-alpha07'
+        viewmodel_compose_version = '2.4.0'
         accompanist_version = '0.15.0'
         rxJavaVersion = '2.2.9'
         rxAndroidVersion = '2.1.1'
         retrofit_version = '2.9.0'
         okhttp_version = '5.0.0-alpha.3'
+        coroutines_version = '1.6.0-native-mt'
+        activity_version = '1.4.0'
+        fragment_version = '1.4.0'
     }
     repositories {
         google()
