--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         coroutines_version = '1.6.0-native-mt'
         activity_version = '1.4.0'
         fragment_version = '1.4.0'
+        nav_version  = '2.3.5'
     }
     repositories {
         google()
