--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         room_version = '2.4.1'
         lifecycle_version = "2.4.0"
         hilt_version = '2.40.5'
-        activity_compose_version = '1.3.1'
+        activity_compose_version = '1.4.0'
         viewmodel_compose_version = '2.4.0'
         accompanist_version = '0.15.0'
         rxJavaVersion = '2.2.9'
@@ -15,6 +15,7 @@ buildscript {
         activity_version = '1.4.0'
         fragment_version = '1.4.0'
         nav_version  = '2.3.5'
+        permissions = '4.9.1'
     }
     repositories {
         google()
